--- a/public/admin/css/dashboard.css
+++ b/public/admin/css/dashboard.css
@@ -223,3 +223,16 @@ footer p {
     margin: 10px 0 0;
     }
 }
+.form-buttons {
+    display: flex;
+    gap: 15px; /* Jarak antar tombol */
+    align-items: center;
+}
+.btn-warning:hover {
+    background-color: green;
+}
+
+.btn-danger:hover {
+    background-color: #c82333;
+}
+
